--- a/EntityFramework/EntityFramework.csproj
+++ b/EntityFramework/EntityFramework.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.11" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+      <PackageReference Include="Serilog" Version="2.12.0" />
     </ItemGroup>
 
 </Project>
