Changed sqlite database file path

--- a/WPF/appsettings.json
+++ b/WPF/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "database": "sql",
   "sql": {
-    "connection_string": "Data Source=Reports.db"
+    "connection_string": "Data Source=data\\Reports.db"
   },
   "mysql": {
     "server": "localhost",
