Changed assembly name

--- a/WPF/WPF.csproj
+++ b/WPF/WPF.csproj
@@ -7,6 +7,7 @@
         <UseWPF>true</UseWPF>
         <LangVersion>11</LangVersion>
         <ApplicationIcon>call-report-icon-3.ico</ApplicationIcon>
+        <AssemblyName>P2_Reporting</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
